<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NameMemo</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="showName">Name anzeigen</string>
    <string name="addExamples">Einträge zur Datenbank hinzugügen</string>
    <string name="deleteDialogTitle">Glückwunsch!</string>
    <string name="dialogBack">Zurück</string>
    <string name="dialogCancel">Abbrechen</string>
    <string name="dialogOk">Okay</string>
    <string name="captureImage">Neues Bild aufnehmen</string>
    <string name="infoDialogTitle">Appinfo</string>
    <string name="infoDialog">
        NameMemo - Namenlern App
        \nEine App von: Leander Dreier
        \nVersion: Beta 0.1
        \nKontakt: leander.dreier@googlemail.com
    </string>
    <string name="mfileDialogTitle">Datei nicht gefunden</string>
    <string name="nPicDialogTitle">Neues Bild aufgenommen</string>
    <string name="nPicDialogTitle2">Neues Bild hinzugefügt</string>
    <string name="nPicDialogMessage">Geben Sie den Namen ein der diesem Bild zugeordnet werden soll</string>
    <string name="cleanProject">App zurücksetzen</string>
    <string name="addNewPic">Neues Bild aus Datei hinzufügen</string>
    <string name="notInList">Das gesuchte Gerät ist nicht in der Liste</string>
    <string name="importDialogTitle">Neue Datensätze:</string>
    <string name="importDialogMessage">Wählen Sie, welche Daten Sie übernehmen wollen</string>
    <string name="btConnected">Verbunden\nDrücken Sie Senden auf dem entsprechenden Gerät</string>
    <string name="btNotSupported">Das Gerät unterstützt Bluetooth nicht</string>
    <string name="btNotEnabled">Sie müssen hierfür Bluetooth aktivieren</string>
    <string name="btShowPaired">Gekoppelte Geräte:</string>
    <string name="btConnecting">Versuche Verbindung mit dem Gerät aufzubauen</string>
    <string name="btShowDiscovered">Gefundene Geräte:</string>
    <string name="send">Senden</string>
    <string name="receive">Empfangen</string>
    <string name="cDMainPic">Ordnen Sie diesem Bild einen Namen zu</string>
    <string name="nfcInstruction">Halten Sie die beiden Geräte Rücken an Rücken
        \nund tippen sie den Bildschirm des sendenden Geräts an.
        \nDanach drücken sie den Button unten auf dem empfangenden Gerät</string>
    <string name="nfcImport">Datenbank importieren</string>
    <string name="cDPreview">Vorschaubild</string>
    <string name="impAll">Datenbank überschreiben</string>
    <string name="impNew">Neue Einträge hinzufügen</string>
    <string name="impUpdate">Neue Einträge und Updates</string>
    <string name="input">Eingabe</string>
    <string name="btMenu">Bluetooth Datenübertragung</string>
    <string name="nfcMenu">NFC Datenübertragung</string>
    <string name="settingsMenu">Einstellungen</string>
    <string name="inarowReq">Mindestens benötigte Übereinstimmungen zum Löschen eines Bildes</string>
    <string name="rdmSeq">Außwahl der Bilder nach dem Können des Nutzers</string>
    <string name="colPics">Bilder in einem Ordner zusammenfassen (Für Datenübertragung)</string>
    <string name="invalidInput">Ungültige Eingabe!</string>
    <string name="ensureDiscoverable">Gerät für andere sichtbar machen</string>
    <string name="discover">Nach anderen Geräten suchen</string>
    <string name="writeErr">Kein Schreibzugriff möglich</string>
    <string name="readErr">Kein Lesezugriff möglich</string>
    <string name="canceled">Abgebrochen</string>
    <string name="failed">Fehlgeschlagen</string>
</resources>
