<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bImpAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/impAll" />

    <Button
        android:id="@+id/bImpNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/impNew" />

    <Button
        android:id="@+id/bImpUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/impUpdate" />

    <Button
        android:id="@+id/bImpCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogCancel" />

</LinearLayout>