<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<EditText
		android:id="@+id/etInarowReq"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/tvInarowReq"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:ems="3"
		android:inputType="number"
		android:layout_margin="5dp" />

	<TextView
		android:id="@+id/tvInarowReq"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_toLeftOf="@id/etInarowReq"
		android:layout_toStartOf="@id/etInarowReq"
		android:text="@string/inarowReq"
		android:textColor="#000000"
		android:textSize="20sp"
		android:layout_margin="5dp" />

	<Switch
		android:id="@+id/sRdmSeq"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/etInarowReq"
		android:text="@string/rdmSeq"
		android:textColor="#000000"
		android:textOff="AUS"
		android:textOn="AN"
		android:textSize="20sp"
		android:layout_margin="5dp" />

	<Switch
		android:id="@+id/sColPics"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_below="@id/sRdmSeq"
		android:text="@string/colPics"
		android:textColor="#000000"
		android:textOff="AUS"
		android:textOn="AN"
		android:textSize="20sp"
		android:layout_margin="5dp" />

</RelativeLayout>